--- a/typo3/sysext/lowlevel/Resources/Private/Language/locallang.xlf
+++ b/typo3/sysext/lowlevel/Resources/Private/Language/locallang.xlf
@@ -36,6 +36,9 @@
 			<trans-unit id="siteConfiguration">
 				<source>Site Configuration</source>
 			</trans-unit>
+			<trans-unit id="eventListeners">
+				<source>Event Listeners (a.k.a. Hooks)</source>
+			</trans-unit>
 			<trans-unit id="t3services">
 				<source>$GLOBALS['T3_SERVICES'] (Registered Services)</source>
 			</trans-unit>
